<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Journal App</string>

    //Google strings definition culled from firebase documentation
    <string name="loading">Loading…</string>

    <string name="signed_in" tools:keep="@string/signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Sign in using your gmail</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>

    <string name="desc_firebase_lockup">Firebase logo and name</string>

    <string name="sign_in" tools:keep="@string/sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>

    <string name="disconnect">Disconnect</string>
    <string name="write_some_notes">Write some notes...</string>
    <string name="general">General</string>
    <string name="work">Work</string>
    <string name="family">Family</string>
    <string name="personal">Personal</string>
    <string name="add">Add</string>
    <string name="journal_tag">Journal</string>
</resources>
