<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_accept"
        android:icon="@drawable/ic_check"
        android:orderInCategory="100"
        android:title="@string/add"
        app:showAsAction="always" />
</menu>